--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -25,3 +25,47 @@
 	font-weight: 600;
 	font-style: italic;
 }
+
+/* OSWALD */
+
+@font-face {
+	font-family: 'OswaldExtraLight';
+	src: url('./fonts/Oswald-ExtraLight.ttf') format('truetype');
+	font-weight: 200;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'OswaldLight';
+	src: url('./fonts/Oswald-Light.ttf') format('truetype');
+	font-weight: 300;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'OswaldRegular';
+	src: url('./fonts/Oswald-Regular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'OswaldMedium';
+	src: url('./fonts/Oswald-Medium.ttf') format('truetype');
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'OswaldSemiBold';
+	src: url('./fonts/Oswald-SemiBold.ttf') format('truetype');
+	font-weight: 600;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'OswaldBold';
+	src: url('./fonts/Oswald-Bold.ttf') format('truetype');
+	font-weight: 700;
+	font-style: normal;
+}
